# fast_food_delivery

./: TZ.md  pyproject.toml
alembic/versions/: f0b527d5ca28_fix_pyproject_toml.py
app/routers/: order.py
