[project]
name = "fast-food-delivery"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "fastapi[standard]>=0.128.4",
    "jose>=1.0.0",
    "passlib[argon2]>=1.7.4",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-jose>=3.5.0",
    "redis>=7.2.0",
    "ruff>=0.15.2",
    "sqlalchemy>=2.0.46",
    "starlette-admin>=0.16.0",
    "uvicorn>=0.40.0",
]
